codex-rs/astral-tui/src/snapshots/astral_tui__prompt_interaction__tests__ask_user_preserves_question_semantics_and_masks_secret_notes.snap
---
source: astral-tui/src/prompt_interaction_tests.rs
expression: buffer_text(&buffer)
---
Answer questions · 1/2
  Scope  Token
────────────────────────────────────────────────────────────────────────
 Choose Scope

 › 1 (○) Alpha
       Change the first target
   2 (○) Beta
   3 (○) None of the above
    ↑/↓ navigate  |  Space select  |  Enter next/submit  |  z notes
