codex-rs/astral-tui/src/snapshots/astral_tui__prompt_interaction__tests__front_approval_owns_input_until_its_exact_request_is_resolved.snap
---
source: astral-tui/src/prompt_interaction_tests.rs
expression: buffer_text(&buffer)
---
Allow command? · 2 requests waiting
 Reason: The command needs explicit approval
 $ cargo test -p astral-tui
 › 1. Yes, proceed
   2. No, and tell Astral Code what to do differently
                ↑/↓ navigate  |  Enter confirm  |  Esc cancel
