codex-rs/astral-tui/src/snapshots/astral_tui__prompt_interaction__tests__mcp_form_elicitation_edits_fields_and_submits_exact_content.snap
---
source: astral-tui/src/prompt_interaction_tests.rs
expression: buffer_text(&buffer)
---
Provide details · workspace-tools
  Project  Tier
────────────────────────────────────────────────────────────────────────────
 Configure the generated workspace.

 Field 1/2 · required
 ◆ Project *
 Name shown in the generated workspace.
 Text · min 2 chars
 › ▏Type a value
        Ctrl+P/N field  |  Enter next/submit  |  Shift+Enter newline
                                 Esc cancel
