codex-rs/astral-tui/src/snapshots/astral_tui__prompt_interaction__tests__mcp_tool_action_form_preserves_parameters_and_persist_choice.snap
---
source: astral-tui/src/prompt_interaction_tests.rs
expression: buffer_text(&buffer)
---
Run create_event? · codex-apps
 Allow Calendar to create an event?
 Title: Roadmap review with a deliberately long description that must
 remain bounded ins…
 Calendar: Astral
 Timezone: Asia/Singapore
 … 1 more parameters
 › 1. Run tool
   2. Allow for this session
   3. Always allow
   4. Cancel
               ↑/↓ navigate  |  Enter confirm  |  Esc cancel
