codex-rs/astral-tui/src/snapshots/astral_tui__prompt_interaction__tests__mcp_url_elicitation_blocks_unsafe_link.snap
---
source: astral-tui/src/prompt_interaction_tests.rs
expression: buffer_text(&buffer)
---
Action required · payments
 Review the payment details to continue.

 URL
 http://example.com/action

 Blocked: only credential-free HTTPS URLs can be opened.
 › 1. Decline
             ↑/↓ navigate  |  Enter confirm  |  Esc decline
