codex-rs/astral-tui/src/snapshots/astral_tui__prompt_interaction__tests__mcp_url_elicitation_opens_only_safe_links_and_preserves_two_stage_flow.snap
---
source: astral-tui/src/prompt_interaction_tests.rs
expression: buffer_text(&buffer)
---
Action required · payments
 Review the payment details to continue.

 URL
 https://payments.example/checkout/123

 Complete the requested action in your browser, then return here.
 › 1. Open link
   2. Back
             ↑/↓ navigate  |  Enter confirm  |  Esc decline
