codex-rs/astral-tui/src/snapshots/astral_tui__prompt_interaction__tests__mcp_url_elicitation_waits_for_browser_confirmation.snap
---
source: astral-tui/src/prompt_interaction_tests.rs
expression: buffer_text(&waiting_buffer)
---
Finish in browser
 Complete the requested action in the browser window that just opened.
 Then return here and select “I finished”.

 Link
 https://payments.example/checkout/123
 › 1. I finished
   2. Back
             ↑/↓ navigate  |  Enter confirm  |  Esc decline
